@@ -1,4 +1,6 @@
 1.0.13:
+Sam Lantinga - Sat Apr 28 16:39:45 PDT 2001
+ * Allow the GPG signature verification to be cancelled
 Sam Lantinga - Sat Apr 28 16:19:07 PDT 2001
  * Tell new update archives not to perform checksum verification
 Sam Lantinga - Sat Apr 28 16:15:13 PDT 2001
